--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./style.css" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Kalkulator PPN</title>
+    <title>Kalkulator PPN (Belanjaan)</title>
     <meta property="og:title" content="Kalkulator PPN">
     <meta name="description" content="Menghitung berapa sih harga sebenarnya jika terkena ppn?">
     <meta property="og:description" content="Menghitung berapa sih harga sebenarnya jika terkena ppn?">
@@ -30,6 +30,11 @@
       <div class="flex items-center px-3 py-2">
         <p>Persentase PPN saat ini</p>
         <select data-ppn-value></select>
+      </div>
+      <div class="px-3 py-2">
+        <blockquote class="p-2 px-3 rounded-lg bg-orange-600 text-white my-2">
+          <p class="text-[0.9rem]">Kalkulator sederhanan untuk menghitung harga barang / belanjaan</p>
+        </blockquote>
       </div>
       <div class="f-full overflow-hidden">
         <div data-tab-content class="flex items-start">
