--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
       <div class="px-3 py-2">
         <blockquote class="p-2 px-3 rounded-lg bg-orange-600 text-white my-2">
-          <p class="text-[0.9rem]">Kalkulator sederhanan untuk menghitung harga barang / belanjaan</p>
+          <p class="text-[0.9rem]">Kalkulator sederhana untuk menghitung harga barang / belanjaan</p>
         </blockquote>
       </div>
       <div class="f-full overflow-hidden">
